# pmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  configure.py  vcpkg-configuration.json
assets/templates/common/: CMakeLists.txt  CMakePresets.json
assets/templates/features/installable/: install.py
assets/templates/features/testable/cmake/: enable_tests.cmake
cmake/: enable_vcpkg.cmake  static_analyzers.cmake
pmake/: CMakeLists.txt
pmake/include/pmake/: CMakeLists.txt  setup.hpp
pmake/include/pmake/cli/: options.hpp
pmake/include/pmake/files/: output.hpp
pmake/include/pmake/runtime/: Information.hpp  Runtime.hpp
pmake/include/pmake/runtime/platform/: Linux.hpp  Windows.hpp
pmake/source/: CMakeLists.txt  Main.cpp  main.cpp  setup.cpp
pmake/source/files/: CMakeLists.txt  output.cpp
resources/: pmake-info.json
resources/templates/common/!PROJECT!/: CMakeLists.txt
resources/templates/features/imgui/: CMakeLists.txt
resources/templates/features/imgui/!PROJECT!/source/: CMakeLists.txt  Main.cpp
